# hydra-engine

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
hydra-engine/: __main__.py  app.py  parser.py  schemas.py
hydra-engine/files/: appset.json  appset.yaml  appset1.json
hydra_engine/: .hydraignore  __init__.py  __main__.py  _app.py  _logging.py  app.py  configs.py  filewatcher.py  parser.py  router.py  schemas.py  validator.py  wizard_router.py
hydra_engine/configs/: HypercornConfig.py  __init__.py  _config.py  yaml_parser_config.py
hydra_engine/files/: .hydraignore  common.yml  global.yml  vars.yml
hydra_engine/search/: analyzer.py  doc_parser.py  index_schema.py  searcher.py  status.py
hydra_engine/static/: plan.html  script.js  style.css
hydra_engine/wwwroot/: 404.html  appsettings.json  appsettings.json.br  hydra_engine_blazor.styles.css  index.html
hydra_engine_blazor/: App.razor  Program.cs  SettingsContainer.cs  WizardContainer.cs  _Imports.razor  hydra_engine_blazor.csproj
hydra_engine_blazor/Components/: AutoCompleteComponent.razor  ElemComponent.razor  ElemComponent.razor.css  ElemComponent.razor.js  Loader.razor  Loader.razor.css  Modal.razor  Modal.razor.css  Modal.razor.js  SearchCard.razor  SearchCard.razor.css  Wizard.razor  Wizard.razor.css
hydra_engine_blazor/Models/: CommentItem.cs  Condition.cs  ControlsMeta.cs  ElemInfo.cs  JsonParser.cs  ParameterSaveInfo.cs  SearchEntity.cs
hydra_engine_blazor/Pages/: Index.razor  Index.razor.css  Index.razor.js  PlanModel.cs  ResetModel.cs  Wizard.razor  Wizard.razor.css  WizardModel.cs  WizardPage.razor  WizardPage.razor.css
hydra_engine_blazor/Properties/: launchSettings.json
hydra_engine_blazor/Shared/: AlertDialog.razor  AlertDialog.razor.css  ElementsKeysTree.razor  ElementsKeysTree.razor.css  EmptyLayout.razor  MainLayout.razor  MainLayout.razor.css  MainLayout.razor.js  NavMenu.razor  NavMenu.razor.css  WizardLayout.razor  WizardLayout.razor.css  (+3 more)
(+47 files in other folders)
