[tool.poetry]
name = "hydra-engine"
version = "0.1.0"
description = ""
authors = ["I.Ogolikhin <43723188+datasatanic@users.noreply.github.com>"]
license = "Apache v2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.85.1"
hypercorn = "^0.14.3"
watchdog = "^2.2.1"


[tool.poetry.group.dev.dependencies]
uvicorn = { version = "^0.19.0", extras = ["standard"] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
