[tool.poetry]
name = "hydra-engine"
version = "0.1.0"
description = ""
authors = ["I.Ogolikhin <43723188+datasatanic@users.noreply.github.com>"]
license = "Apache v2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.85.1"
nltk = "^3.7"
hypercorn = "^0.14.3"
watchdog = "^2.2.1"
whoosh = "^2.7.0"
pytz = "^2022.7.1"
apscheduler = "^3.9.1.post1"
maya = "^0.6.1"
typer = "^0.7.0"


[tool.poetry.group.dev.dependencies]
uvicorn = { version = "^0.19.0", extras = ["standard"] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
validate="hydra_engine.validator:validate"