[tool.poetry]
name = "hydra-engine"
version = "0.1.0"
description = ""
authors = ["I.Ogolikhin <43723188+datasatanic@users.noreply.github.com>"]
license = "Apache v2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
nltk = "^3.7"
watchdog = "^3.0.0"
whoosh = "^2.7.0"
pytz = "^2022.7.1"
apscheduler = "^3.9.1.post1"
maya = "^0.6.1"
typer = "^0.7.0"
starlette-prometheus = "^0.9.0"
pyyaml = "^6.0"
uvicorn = "^0.20.0"
jinja2 = "^3.1.2"
graphviz = "^0.20.1"
ruamel-yaml = "^0.18.5"
commentjson = "^0.9.0"
markdown = "^3.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
validate="hydra_engine.validator:validate"